# Sound-Enhancer-9000TM

./: CMakeLists.txt  README.md
resource/: Info.plist  Sonic Enhaser 90000™.txt  myplugineditor.rc  myplugineditor.uidesc
source/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
